app/assets/stylesheets/components/_header.scss
.navbar {
  border: none;
  height: 80px;
  margin-bottom: 0;
}

.navbar-default {
  background-color: $purple;
  border-radius: 0;

  .navbar-nav > li > a {
    padding: 30px 20px;
    color: white;
    font-size: 0.875rem;

    &:hover,
    &:focus {
      color: $magenta;
    }
  }

  .navbar-nav > li:last-of-type > a {
    padding: 30px 0px 30px 20px;
  }

  .navbar-collapse {
    background-color: $purple;
    border: 0;
    box-shadow: 0;

    &.collapsing,
    &.in {
      .navbar-nav > li > a {
        padding: 15px;
      }
    }
  }

  .navbar-toggle {
    padding: 13px 10px;
    margin-top: 18px;
    margin-bottom: 18px;
    border: 2px solid $magenta;
    border-radius: 8px;

    .icon-bar {
      background-color: $magenta;
    }

    &:hover,
    &:focus {
      background-color: $magenta;
      transition: all 0.2s;

      .icon-bar {
        background-color: white;
        transition: all 0.2s;
      }
    }
  }
}

